--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
+    "@parcel/transformer-sass": "^2.13.3",
+    "parcel": "^2.13.3",
     "sass": "^1.30.0"
   }
 }
